improved transparency for fit to csv

--- a/convert_fit_to_csv.ipynb
+++ b/convert_fit_to_csv.ipynb
@@ -144,6 +144,41 @@
     "#Convert to csv\n",
     "hrv_hourly.to_csv(\"heart_rate_variability_hourly.csv\",index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Aleksandra\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sdv\\single_table\\base.py:134: UserWarning: We strongly recommend saving the metadata using 'save_to_json' for replicability in future SDV versions.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "hrv = pd.read_csv(\"407432248700_HRV_STATUS-hrv_value.csv\")\n",
+    "metadata = Metadata.detect_from_dataframe(hrv) \n",
+    "synthesizer = GaussianCopulaSynthesizer(metadata) \n",
+    "synthesizer.fit(hrv) #synthesizer is fitted onto the data\n",
+    "hrv_synthetic = synthesizer.sample(num_rows=400) #synthesizer generates rows\n",
+    "\n",
+    "\n",
+    "#create timestamps for each hour\n",
+    "n = len(hrv_synthetic)\n",
+    "hours = 24\n",
+    "hrv_synthetic[\"hour_bin\"] = (np.arange(n) * hours // n) \n",
+    "start = \"00:00:00\"\n",
+    "hour_timestamps = pd.date_range(start=start, periods=hours, freq=\"h\")\n",
+    "#aggregate each hour_bin\n",
+    "hrv_hourly = hrv_synthetic.groupby(\"hour_bin\").mean(numeric_only=True)\n",
+    "hrv_hourly[\"value\"] = round(hrv_hourly[\"value\"])\n",
+    "hrv_hourly[\"hour_timestamp\"] = hour_timestamps\n",
+    "hrv_hourly.to_csv(\"hrv_hourly.csv\",index=False)"
+   ]
   }
  ],
  "metadata": {
