added extra comments

--- a/convert_fit_to_csv.ipynb
+++ b/convert_fit_to_csv.ipynb
@@ -16,9 +16,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "device_info\n",
+      "event\n",
+      "file_id\n",
+      "monitoring\n",
+      "monitoring_info\n",
+      "ohr_settings\n",
+      "software\n",
+      "stress_level\n",
+      "unknown_211\n",
+      "unknown_233\n",
+      "unknown_24\n",
+      "unknown_297\n",
+      "unknown_355\n",
+      "unknown_408\n",
+      "unknown_484\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -35,7 +56,7 @@
     "\n",
     "#Checks the existing message names which can be filtered on\n",
     "message_names = set()\n",
-    "for msg in g.get_messages():\n",
+    "for msg in f.get_messages():\n",
     "    message_names.add(msg.name)\n",
     "for name in sorted(message_names):\n",
     "    print(name)\n",
@@ -57,11 +78,11 @@
     "hr_synthetic = synthesizer.sample(num_rows=400) #synthesizer generates rows\n",
     "hr_synthetic = hr_synthetic.drop([\"unknown_37\", \"unknown_38\", \"activity_type\", \"current_activity_type_intensity\",\"intensity\"], axis=1)\n",
     "\n",
+    "\n",
+    "#create timestamps for each hour\n",
     "n = len(hr_synthetic)\n",
     "hours = 24\n",
-    "\n",
     "hr_synthetic[\"hour_bin\"] = (np.arange(n) * hours // n)  #integer hour index\n",
-    "#create timestamps for each hour\n",
     "start = \"00:00:00\"\n",
     "hour_timestamps = pd.date_range(start=start, periods=hours, freq=\"h\")\n",
     "#aggregate each hour_bin\n",
@@ -70,12 +91,12 @@
     "hr_hourly[\"hour_timestamp\"] = hour_timestamps\n",
     "\n",
     "#Convert to csv\n",
-    "hr_hourly.to_csv(\"heart_rate_hourly.csv\",index=False)"
+    "hr_hourly.to_csv(\"public/heart_rate_hourly.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -101,6 +122,7 @@
     }
    ],
    "source": [
+    "#unfortunately does not give the correct hrv results, while this would be expected\n",
     "#Read the .fit file\n",
     "g=FitFile(\"407432248700_HRV_STATUS.fit\")\n",
     "data_g=[]\n",
@@ -142,12 +164,12 @@
     "hrv_hourly[\"hour_timestamp\"] = hour_timestamps\n",
     "\n",
     "#Convert to csv\n",
-    "hrv_hourly.to_csv(\"heart_rate_variability_hourly.csv\",index=False)"
+    "hrv_hourly.to_csv(\"public/incorrect_hrv_hourly.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -160,12 +182,14 @@
     }
    ],
    "source": [
+    "#Reads filtered .csv file which was converted using (https://www.fitfileviewer.com/)\n",
     "hrv = pd.read_csv(\"407432248700_HRV_STATUS-hrv_value.csv\")\n",
+    "\n",
+    "#metadata is extracted and used to make a synthesizer\n",
     "metadata = Metadata.detect_from_dataframe(hrv) \n",
     "synthesizer = GaussianCopulaSynthesizer(metadata) \n",
     "synthesizer.fit(hrv) #synthesizer is fitted onto the data\n",
     "hrv_synthetic = synthesizer.sample(num_rows=400) #synthesizer generates rows\n",
-    "\n",
     "\n",
     "#create timestamps for each hour\n",
     "n = len(hrv_synthetic)\n",
@@ -177,7 +201,9 @@
     "hrv_hourly = hrv_synthetic.groupby(\"hour_bin\").mean(numeric_only=True)\n",
     "hrv_hourly[\"value\"] = round(hrv_hourly[\"value\"])\n",
     "hrv_hourly[\"hour_timestamp\"] = hour_timestamps\n",
-    "hrv_hourly.to_csv(\"hrv_hourly.csv\",index=False)"
+    "\n",
+    "#Convert back to csv\n",
+    "hrv_hourly.to_csv(\"public/hrv_hourly.csv\",index=False)"
    ]
   }
  ],
